Fix toggles when high contrast mode is on for windows 10.

--- a/scss/_toggles.scss
+++ b/scss/_toggles.scss
@@ -64,6 +64,9 @@
 		&:hover {
 			box-shadow: 0 0 0 5px $toggle-slider-bg-hover-color;
 		}
+		@media ( -ms-high-contrast: active ) {
+			-ms-high-contrast-adjust: none;
+		}
 	}
 
 	// Knob when off.
